incorportaing lanees edits

--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -22,7 +22,7 @@ affiliation:
     institution   : "Program in Statistical and Data Sciences, Smith College"
 
 abstract: |
-  Empirical evidence has only found links between objectification, self-objectification, and negative outcomes for woman within interpersonal interactions between male-female pairs. The purpose of the present study was to extend past research and consider the relationships between such valuable phenomena and their effects on authenticity within interactions between female pairs. Woman were brought into the laboratory and interacted in same-sex dyads. Dyadic analysis was utilized to detect whether partners’ objectification of each other affected state self-objectification, and the resulting feelings of comfort and authenticity during the interaction. After the interaction, participants completed a questionnaire which measured many constructs including cognitive performance, career aspirations, and relationship agency. Results revealed no significant relationship between self-objectification and authenticity. Further, although there were significantly negative effects on career aspirations and relationship agency resulting from a lack of relationship authenticity, there was no evidence that this is due to feelings of sexual objectification. The significant partner effect of objectification on actor self-objectification suggests that women being objectified by other women still results in feelings of self-objectification, and such research has powerful implications for the ways that women interact in both sexual and non-sexual settings. AUTHOR NOTE: mention Clark trigram coders Hannah et al. 
+  Empirical evidence has only found links between objectification, self-objectification, and negative outcomes for women within interpersonal interactions between male-female pairs. The purpose of the present study was to extend past research and consider the relationships between such valuable phenomena and their effects on authenticity within interactions between female pairs. Women were brought into the laboratory and interacted in same-sex dyads. Dyadic analysis was utilized to detect whether partners’ objectification of each other affected state self-objectification, and the resulting feelings of comfort and authenticity during the interaction. After the interaction, participants completed a questionnaire which measured many constructs including cognitive performance, career aspirations, and relationship agency. Results revealed no significant relationship between self-objectification and authenticity. Further, although there were significantly negative effects on career aspirations and relationship agency resulting from a lack of relationship authenticity, there was no evidence that this is due to feelings of sexual objectification. The significant partner effect of objectification on actor self-objectification suggests that women being objectified by other women still results in feelings of self-objectification, and such research has powerful implications for the ways that women interact in both sexual and non-sexual settings. AUTHOR NOTE: mention Clark trigram coders Hannah et al. 
   
 keywords          : "keywords"
 
@@ -38,7 +38,7 @@ draft             : no
 
 documentclass     : "apa6"
 classoption       : "man"
-output            : papaja::apa6_pdf
+output            : papaja::apa6_word
 ---
 
 ```{r setup, analysis-preferences}
@@ -66,28 +66,28 @@ library(lavaan)
 library(xtable)
 ```
     
-@robertsfredrickson Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification might be the strongest when it is a man doing the objectifying [@gervais2011you], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women, have in recent years explored the interpersonal process of the objectification, finding evidence for self-objectification in the target as a proximal consequence [@garcia2016objectification, @strelan2018birds, @riemer2020self]. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectification of their female interaction partner during an interaction was associated with increased self-objectification reported by their partner. They did not include same-gender woman-woman interacting pairs. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but their model is currently only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there are currently no studies investigating the process of interpersonal objectification in same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? The current study addressing this omission with a dyadic study of interacting pairs where both members identify as women. 
+@robertsfredrickson Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification might be the strongest when it is a man doing the objectifying [@gervais2011you], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women, have in recent years explored the interpersonal process of the objectification, finding evidence for self-objectification in the target as a proximal consequence [@garcia2016objectification, @strelan2018birds, @riemer2020self]. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men’s reported objectification of their female interaction partner was associated with increased self-objectification reported by their partner. They did not include same-gender, woman-woman interacting pairs. @gervais2020social have reviewed the literature on interpersonal self-objectification and has organized the process in a theoretical model called the Social Interaction Model of Objectification (SIMO), but this model is currently only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there are currently no studies investigating the process of interpersonal objectification in same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? The current dyadic study addresses this omission using interacting pairs where both members identify as women. 
 
 ##Self-Objectification
-Self-objectification is a psychological process that accounts offers a cognitive mechanism for translating the experiences of interpersonal objectification [@loughnan2015exploring] to negative mental health outcomes (e.g., anxiety, self-esteem, and cognitive performance) [@calogero2011; @moradi2008]. @calogero2011 proposes that self-objectification can be conceptualized as a learned trait, or *trait* self-objectification (TSO). Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines [@morry2001magazine], or when wearing sexualizing clothing [@fredrickson1998swimsuit]. This momentary self-objectification is referrd to as *state* self-objectification [@bernard2018bodies; @calogero2011; @moradi2008]. Being objectified by another person may interact TSO to effect experiences of feeling like a body, or state self-objectification [SSO; @garcia2016objectification].
+Self-objectification is a psychological process that accounts offer a cognitive mechanism for translating the experiences of interpersonal objectification [@loughnan2015exploring] to negative mental health outcomes (e.g., anxiety, self-esteem, and cognitive performance) [@calogero2011; @moradi2008]. @calogero2011 proposes that self-objectification can be conceptualized as a learned trait, or *trait* self-objectification (TSO). Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines [@morry2001magazine], or when wearing sexualizing clothing [@fredrickson1998swimsuit]. This momentary self-objectification is referred to as *state* self-objectification [@bernard2018bodies; @calogero2011; @moradi2008]. Being objectified by another person may interact TSO to effect experiences of feeling like a body, or state self-objectification [SSO; @garcia2016objectification].
 
 ##Women Objectifying Women
-Past research has focused on men’s objectifying behaviors, with little attention to the role that women may also play in enacting objectification of women. @hill2008examining assessed women’s experiences of objectification from men separately from women’s experiences of objectification from women and found that women may be socialized not only to see themselves as objects but perhaps to see other women as objects as well, although this process was not comfirmed to occur during an actual interpersonal interaction. Some studies have actually found that women objectify other women to a greater extent than they objectify men [@loughnan2015exploring]. Women have also been found to objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know very little about interpersonal sexual objectification among women and what the immediate effects of this objectification might be. Objectification has more adverse consequences for women than men [@gervais2011you; @moradi2008; @saguyetal2010], however, if women objectify other women, perhaps even to a stronger degree than they objectify men, this higher dose of objectification might be a detrimental combination. 
-
 @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women participants (although men scored higher than women on a measure of belief that objectification of women is natural for men). Additionally, @strelan2005women found that the more women self-objectify, the more they objectify other women. Could the process work in the other direction as well, that is, could objectification by a women produce self-objectification, an a similar manner to mixed-gender interactions? 
 
+Past research has focused on men’s objectifying behaviors, with little attention to the role that women may also play in objectifying other women. @hill2008examining assessed women’s experiences of objectification from men separately from women’s experiences of objectification from women and found that women may be socialized not only to see themselves as objects but perhaps to see other women as objects as well, although this process was not comfirmed to occur during an actual interpersonal interaction. @loughnan2015exploring found that women objectify other women to a greater extent than they objectify men. Women have also been found to objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know very little about interpersonal sexual objectification among women and what the immediate effects of this objectification might be. We do know that objectification has more adverse consequences for women than men [@gervais2011you; @moradi2008; @saguyetal2010], however, if women objectify other women, perhaps even to a stronger degree than they objectify men, this higher dose of objectification might be a detrimental combination. 
+
 ##Interpersonal Objectification
-Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and will more than likely internalize the objectifying gaze on physical self [@puvia2013being; @young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated [self-objectification; @Bartky; @berger1972; @fredrickson1998swimsuit]. @gervais2020social recently review the research on interpersonal objectification and organized our currentl theoretical understanding of this process in the Social Interaction Model of Objectification (SIMO). What is clear from @gervais2020social is that we know little about women-on-women interpersonal objectification. Could there also be negative consequences of this type of interpersonal objectification? Perhaps women could be amplifying each others' state self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men oragnized in the SIMO occur. In this way, women's rituals of getting ready together might places even low TSO women in a higher SSO group. 
+Studies have shown that within social encounters women are gazed at more than men [@briton1995], and often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and will more than likely internalize the objectifying gaze on physical self [@puvia2013being; @young1979]. Moreover, perhaps the most adverse effect is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated [@Bartky; @berger1972; @fredrickson1998swimsuit]. @gervais2020social recently reviewed the research on interpersonal objectification and organized our current theoretical understanding of this process in the Social Interaction Model of Objectification (SIMO). What is clear from @gervais2020social is that we know little about women-on-women interpersonal objectification. Could there also be negative consequences of this type of interpersonal objectification? Perhaps women could be amplifying each others' state self-objectification as they get ready to go out for the night [EDIT??], *before* the theoretical encounters with men oraganized in the SIMO occur. In this way, women's rituals of getting ready together might place even women with low TSO in a higher SSO group. 
 
-Interpersonal objectification can also occur within the context of romantic relationships. Among heterosexual male and female college students, self- objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship and they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Both romantic relationships and relationships in general have been studied in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
+Interpersonal objectification can also occur within the context of romantic relationships. Among heterosexual male and female college students, self-objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship in that they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Both romantic relationships and relationships in general have been studied in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
 
-There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) has negative consequences for women, but what about in the context of interactions with other women? Is the self-objectification experienced in mixed-gender interactions associated with the same negative process as that experienced in same-gender interactions? On the one hand, the ample research demonstrating that the male gaze has a particularly detrimental effect would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose], but on the other hand, women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men]. When they do it, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
+There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) has negative consequences for women, but what about in the context of interactions with other women? Is the self-objectification experienced in mixed-gender interactions associated with the same negative process as that experienced in same-gender interactions? On the one hand, there is ample research demonstrating that the male gaze has a particularly detrimental effect would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose], but on the other hand, women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men]. When they do it, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
 
 ##Interpersonal Objectification and Authenticity
-There is some evidence that reduced authenticity is a consequence of self-objectification in the moment [@garcia2016objectification; again CITE PWQ paper I reviewed, Yoder editor]. This link has been justified by the literature on stigmatized-stigmatizer interactions [@hebl2005promoting; CITE A SHELTON THING OR TWO], viewing the experience of being objectified in an interaction as an identity threat situation [@miles2015stop]. Further, empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. When a woman is objectified by a man, and subsequently experiences self-objectification, the intergroup nature of this encounter might trigger identitiy threat. Thus, perhaps there are fewer negative consequence when a woman is objectified by another woman, that is, woman-woman interpersonal objectification processes might diverge from mix-gender interpersonal objectification processes precisely because they are not intergroup interactions (at least with respect to gender identity). A woman objectified by another woman may not be having the same negative consequences that cascade from situations that trigger group-based identity threat [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in any interaction (intergroup or ingroup) may be enough to reduce women's feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; PWQ paper I reviewed, Yoder editor].
+There is some evidence that reduced authenticity is a consequence of self-objectification in the moment [@garcia2016objectification; again CITE PWQ paper I reviewed, Yoder editor]. This link has been justified by the literature on stigmatized-stigmatizer interactions [@hebl2005promoting; @richeson2003prejudice; @shelton2005expecting], viewing the experience of being objectified in an interaction as an identity threat situation [@miles2015stop; @nadal2012effects]. Further, empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. When a woman is objectified by a man, and subsequently experiences self-objectification, the intergroup nature of this encounter might trigger identitiy threat. Thus, perhaps there are fewer negative consequence when a woman is objectified by another woman, that is, woman-woman interpersonal objectification processes might diverge from mix-gender interpersonal objectification processes precisely because they are not intergroup interactions (at least with respect to gender identity). A woman objectified by another woman may not be having the same negative consequences that cascade from situations that trigger group-based identity threat [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in any interaction (intergroup or ingroup) may be enough to reduce women's feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; PWQ paper I reviewed, Yoder editor].
 
 ##The Current Study
-In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification, but between same-gender interpersonal interactions among women. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. Although the literature on woman-woman objectification is small, mixed, and does not cover interpersonal encourters, we expected to replicate some of the results found in @garcia2016objectification. Most importantly, we predicted that being objectified by one’s interaction partner would lead to self-objectification. We also expected, in line with @garcia2016objectification, that TSO would moderate this relationship, amplyfying the positive assocaition between being objectified and SSO for women higher in TSO. We hypothesized that SSO would, in turn, lead to feelings of inauthenticity [although there is ample support against this prediction from the identity threat within intergroup interactions literature; CITE CITE]. Further, we hypothsized that these feelings of inauthencity would then be associated with reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. In summary, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expect to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
+In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification, but between same-gender interpersonal interactions among women. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. Although the literature on woman-woman objectification is small, mixed, and does not cover interpersonal encourters, we expected to replicate some of the results found in @garcia2016objectification. Most importantly, we predicted that being objectified by one’s interaction partner would lead to self-objectification. We also expected, in line with @garcia2016objectification, that TSO would moderate this relationship, amplyfying the positive assocaition between being objectified and SSO for women higher in TSO. We hypothesized that SSO would, in turn, lead to feelings of inauthenticity [although there is ample support against this prediction from the identity threat within intergroup interactions literature; @rollero2016bringing]. Further, we hypothsized that these feelings of inauthencity would then be associated with reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. In summary, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expect to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
 
 Here we would like to note that @puvia2013being would alternatively predict that women's tendency to self-objectify (TSO) leads them to objectify other women (more precisely, to dehumanize a sexualized woman). In addition, @strelan2005women and @harsey2020men would predict the TSO to other-objectification link, further theorezing that this relationships is mediated by the woman's own state self-objectification (SSO). This limited, but extant, set of literature on woman-woman objectification points to a possible alternative model from the model hypothesized in the current study. Where appropriate, we report results considering the causal directions implied by this alternative mediation model.
 
