--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,54 @@
   publisher={American Psychological Association}
 }
 
+@article{richeson2003prejudice,
+  title={When prejudice does not pay: Effects of interracial contact on executive function},
+  author={Richeson, Jennifer A and Shelton, J Nicole},
+  journal={Psychological science},
+  volume={14},
+  number={3},
+  pages={287--290},
+  year={2003},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+
+@article{shelton2005expecting,
+  title={Expecting to be the target of prejudice: Implications for interethnic interactions},
+  author={Shelton, J Nicole and Richeson, Jennifer A and Salvatore, Jessica},
+  journal={Personality and Social Psychology Bulletin},
+  volume={31},
+  number={9},
+  pages={1189--1202},
+  year={2005},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{miles2015stop,
+  title={“Stop looking at me!” Interpersonal sexual objectification as a source of insidious trauma},
+  author={Miles-McLean, Haley and Liss, Miriam and Erchull, Mindy J and Robertson, Caitlin M and Hagerman, Charlotte and Gnoleba, Michelle A and Papp, Leanna J},
+  journal={Psychology of Women Quarterly},
+  volume={39},
+  number={3},
+  pages={363--374},
+  year={2015},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{rollero2016bringing,
+  title={Bringing Objectification into Social Relationships Research: Is Self-Objectification Harmful for Authenticity?},
+  author={Rollero, Chiara},
+  year={2016}
+}
+
+
+@article{nadal2012effects,
+  title={The effects of sexism, gender microaggressions, and other forms of discrimination on women's mental health and development.},
+  author={Nadal, Kevin L and Haynes, Kristal},
+  year={2012},
+  publisher={Praeger/ABC-CLIO}
+}
+
 @article{festinger1954theory,
   title={A theory of social comparison processes},
   author={Festinger, Leon},
