--- a/r-references.bib
+++ b/r-references.bib
@@ -216,3 +216,12 @@
   note = {R package version 0.3.3},
   url = {https://CRAN.R-project.org/package=ggstance},
 }
+@Book{R-rmarkdown,
+  title = {R Markdown: The Definitive Guide},
+  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2018},
+  note = {ISBN 9781138359338},
+  url = {https://bookdown.org/yihui/rmarkdown},
+}
