--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -38,7 +38,7 @@ draft             : no
 
 documentclass     : "apa6"
 classoption       : "man"
-output            : papaja::apa6_word
+output            : papaja::apa6_pdf
 ---
 
 ```{r setup, analysis-preferences}
