--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,15 @@
   publisher={American Psychological Association}
 }
 
+@article{teran2020relational,
+  title={The Relational Burden of Objectification: Exploring How Past Experiences of Interpersonal Sexual Objectification Are Related to Relationship Competencies},
+  author={Ter{\'a}n, Larissa and Jiao, Jian and Aubrey, Jennifer Stevens},
+  journal={Sex Roles},
+  pages={1--16},
+  year={2020},
+  publisher={Springer}
+}
+
 @article{richeson2003prejudice,
   title={When prejudice does not pay: Effects of interracial contact on executive function},
   author={Richeson, Jennifer A and Shelton, J Nicole},
